# yuninput1.0

./: .gitignore  CMakeLists.txt  CMakePresets.json  GITHUB_RELEASE_TEMPLATE.md  GITHUB_RELEASE_TEMPLATE.zh-CN.md  LICENSE  LICENSE.zh-CN.md  NOTICE.md  NOTICE.zh-CN.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  OPEN_SOURCE_RELEASE_CHECKLIST.zh-CN.md  README.en.md  README.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES.zh-CN.md  Yuninput1.0.14.msi  YuninputManual.zh-CN.md  yuninput.def  yuninput.rc  匀码输入法说明书.md  对话记录.md  真实对话.md
assets/: icon_concept.md
data/: yuninput_basic.dict  yuninput_user.dict  yuninput_user.dict.rules  zhengma-all.dict  zhengma-large.dict  zhengma-large.dict.rules  zhengma-single.dict  zhengma.dict  zhengma.dict.rules
docs/: feature-and-doc-index.md  handoff-20260324.md  handoff-release-doc-sync-checklist.md  mode-e2e-checklist.md  mode_samples.tsv  multi-monitor-candidate-window-checklist.md  multi-monitor-candidate-window-test-log-template.csv  multi-monitor-candidate-window-test-log-template.tsv  public-source-file-list-1.0.txt  repo_audit_20260513.md  requirements-audit.md  zhengma-plan.md
include/: CandidateWindow.h  CompositionEngine.h  Globals.h  TextService.h  WildcardCode.h
scripts/: build_config_app.ps1  build_gui_installer.ps1  build_msi_wrapper.ps1  build_release.ps1  clean_delete_ime.ps1  generate_icon.ps1  generate_mode_samples.ps1  generate_pinyin_single_char_dict.ps1  generate_user_dict.ps1  import_table_dict.ps1  inspect_ime_state.ps1  install_enable.ps1  prepare_github_patch_release.ps1  prepare_public_release.ps1  register_ime.ps1  (+12 more)
(+14 files in other folders)
